# tinyrenderer-gui

./: .gitignore  CMakeLists.txt  DESCRIPTION.md  README.md  build.bat  imgui.ini
src/: camera.cpp  camera.h  geometry.h  main.cpp  model.cpp  model.h  our_gl.cpp  our_gl.h  tgaimage.cpp  tgaimage.h
